# malan

./: .gitignore  CMakeLists.txt  README.md  decl.cpp  decl.hpp  expr.cpp  expr.hpp  main.cpp  malan.code-workspace  printer.hpp  stmt.cpp  stmt.hpp  value.hpp
Expressions/: BinaryExpression.cpp  BinaryExpression.hpp  BooleanLiteral.cpp  BooleanLiteral.hpp  Expression.cpp  Expression.hpp  IntegerLiteral.cpp  UnaryExpression.hpp
doc/: project.tex
malan/: Value.hpp  main.cpp
malan/Expressions/: BinaryExpression.cpp  BinaryExpression.hpp  CMakeCache.txt  Expression.cpp  Expression.hpp  IntegerLiteral.hpp  LogicalExpression.cpp  LogicalExpression.hpp  UnaryExpression.cpp
programs/: factorial.dm  factorial.src  fun_call.dm
src/: CMakeLists.txt  Error.hpp  actions.cpp  actions.hpp  builder.check.cpp  builder.conv.cpp  builder.cpp  builder.decl.cpp  builder.expr.cpp  builder.hpp  builder.init.cpp  builder.name.cpp  builder.stmt.cpp  builder.type.cpp  decl.cpp  decl.hpp  error.hpp  expr.cpp  expr.hpp  lex.cpp  lexer.cpp  lexer.hpp  location.hpp  main.cpp  name.cpp  name.hpp  parse.cpp  parser-decl.cpp  parser-expr.cpp  parser-stmt.cpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  scope.hpp  stmt.cpp  stmt.hpp  symbol.hpp  token.cpp  token.hpp  (+4 more)
src/Expressions/: BinaryExpression.cpp  BinaryExpression.hpp  Expression.hpp  UnaryExpression.cpp
test/: CMakeLists.txt  expr_t.cpp
test/src/: BinaryExpression_t.cpp
tests/: expr_t.cpp  lex_t.cpp
